tests/baselines/reference/parserForInStatement6.errors.txt
parserForInStatement6.ts(1,17): error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
parserForInStatement6.ts(1,26): error TS2304: Cannot find name 'X'.


==== parserForInStatement6.ts (2 errors) ====
    for (var a = 1, b = 2 in X) {
                    ~
!!! error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
                             ~
!!! error TS2304: Cannot find name 'X'.
    }